@@ -3,6 +3,7 @@
 - Make textarea fields bigger and automatically growing with the content [#172]
 - Allow a hash in the url containing the ID of a group to automatically open to that tab [#169]
 - Add a line/divider field type to create simple sections [#149]
+- Add a code field type (requires Ace editor) for things like custom CSS or other markup [#144]
 
 ClientConfig 2.2.0-pl
 ---------------------
